[package]
name = "vectorscale"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
memoffset = "0.9.0"
pgrx = "=0.11.4"
rkyv = { version="0.7.42", features=["validation"]}
simdeez = {version = "1.0.8"}
rand = { version = "0.8", features = [ "small_rng" ] }
rand_chacha = "0.3"
rand_core = "0.6"
rand_xorshift = "0.3"
rayon = "1"
pgvectorscale_derive = { path = "pgvectorscale_derive" }
semver = "1.0.22"

[dev-dependencies]
pgrx-tests = "=0.11.4"
pgrx-pg-config = "=0.11.4"
criterion = "0.5.1"
tempfile = "3.3.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
#debug = true

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "lsr"
harness = false
