[package]
name = "vectorscale"
version = "0.6.0-dev"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pgrx_embed_vectorscale"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
memoffset = "0.9.0"
pgrx = "=0.12.5"
rkyv = { version = "0.7.42", features = ["validation"] }
simdeez = { version = "1.0.8" }
rand = { version = "0.8", features = ["small_rng"] }
pgvectorscale_derive = { path = "pgvectorscale_derive" }
semver = "1.0.22"
serial_test = "3.2.0"
once_cell = "1.20.1"

[dev-dependencies]
pgrx-tests = "=0.12.5"
pgrx-pg-config = "=0.12.5"
criterion = "0.5.1"
tempfile = "3.3.0"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "lsr"
harness = false
