[package]
name = "vectorscale"
version = "0.7.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pgrx_embed_vectorscale"
path = "./src/bin/pgrx_embed.rs"

[[bin]]
name = "bench"
path = "./src/bin/bench.rs"

[features]
default = ["pg17", "cli"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []
cli = []

[dependencies]
memoffset = "0.9.0"
pgrx = "=0.12.9"
rkyv = { version = "0.7.43", features = ["validation"] }
simdeez = { version = "1.0.8" }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4.3"
pgvectorscale_derive = { path = "pgvectorscale_derive" }
semver = "1.0.24"
serial_test = "3.2.0"
once_cell = "1.20.1"
# Dependencies for bench
clap = { version = "4.5.1", features = ["derive"] }
hdf5-metno = "0.10.1"
ndarray = "0.15.6"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
futures = "0.3.30"
indicatif = "0.17.7"
uuid = { version = "1.7.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
dirs = "5.0"
chrono = "0.4"
byteorder = "1.5.0"
bytes = "1.5.0"

[dev-dependencies]
pgrx-tests = "=0.12.9"
pgrx-pg-config = "=0.12.9"
criterion = "0.5.1"
tempfile = "3.15.0"

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "lsr"
harness = false
