[package]
name = "timescaledb_vector"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
memoffset = "0.9.0"
pgrx = "=0.9.8"
rkyv = { version="0.7.42", features=["validation"]}
simdeez = {version = "1.0"}
reductive = { version = "0.9.0"}
ndarray = { version = "0.15", features = [ "approx", "rayon" , "blas"] }
blas-src = { version = "0.9.0", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
rand = { version = "0.8", features = [ "small_rng" ] }
rand_chacha = "0.3"
rand_core = "0.6"
rand_xorshift = "0.3"
rayon = "1"

[dev-dependencies]
pgrx-tests = "=0.9.8"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
